# backend-go/module/show/model/show.go
@@ -9,15 +9,16 @@ const EntityName = "Show"
 const TableName = "shows"
 
 type Show struct {
-	ID               int          `json:"id" gorm:"column:id;primary_key" swaggerignore:"true"`
-	Date             *common.Date `json:"date" gorm:"column:date" `
-	StartTime        *common.Time `json:"startTime" gorm:"column:start_time"`
-	EndTime          *common.Time `json:"endTime" gorm:"column:end_time"`
-	AuditoriumID     int64        `json:"-" gorm:"column:auditorium_id"`
-	AuditoriumFakeID string       `json:"auditoriumID" gorm:"-"`
-	ImdbID           string       `json:"imdbID" gorm:"column:imdb_id"`
-	CreatedAt        *time.Time   `json:"-" gorm:"column:created_at"`
-	UpdatedAt        *time.Time   `json:"-" gorm:"column:updated_at"`
+	ID               int                `json:"id" gorm:"column:id;primary_key" swaggerignore:"true"`
+	Date             *common.Date       `json:"date" gorm:"column:date" `
+	StartTime        *common.Time       `json:"startTime" gorm:"column:start_time"`
+	EndTime          *common.Time       `json:"endTime" gorm:"column:end_time"`
+	AuditoriumID     int64              `json:"-" gorm:"column:auditorium_id"`
+	AuditoriumFakeID string             `json:"auditoriumID" gorm:"-"`
+	Auditorium       *common.Auditorium `json:"auditorium" gorm:"preload:false;foreignKey:AuditoriumID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+	ImdbID           string             `json:"imdbID" gorm:"column:imdb_id"`
+	CreatedAt        *time.Time         `json:"-" gorm:"column:created_at"`
+	UpdatedAt        *time.Time         `json:"-" gorm:"column:updated_at"`
 }
 
 func (Show) TableName() string { return TableName }
@@ -25,6 +26,9 @@ func (Show) TableName() string { return TableName }
 func (s *Show) Mask(isAdminOrOwner bool) {
 	uid := common.NewUID(uint32(s.AuditoriumID), common.DbTypeAuditorium, 1)
 	s.AuditoriumFakeID = uid.String()
+	if auditorium := s.Auditorium; auditorium != nil {
+		auditorium.Mask(isAdminOrOwner)
+	}
 }
 
 type ShowUpdate struct {
